# paax-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  app.py  fix-genkit.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  server.ts  tsconfig.json  turbo.json
docs/: MASTER_PLAN.md  (+1 more)
services/core-engine/: Dockerfile  README.md  pyproject.toml  requests.http
services/core-engine/app/: demo.py  main.py
services/core-engine/app/api/: __init__.py  export_routes.py  rab_routes.py
services/core-engine/app/domain/: __init__.py
services/core-engine/app/export/: excel_exporter.py
services/core-engine/app/geometry/: models.py  volume.py
services/core-engine/app/infrastructure/: firestore_repo.py  storage_client.py
services/core-engine/app/rab/: loader.py  models.py  rab.py  schedule.py  sections.py  validate.py
services/core-engine/app/scenario/: models.py  simulate.py
services/core-engine/app/takeoff/: arsitektur.py  dinding.py  models.py  params.py  tanah.py
services/core-engine/app/tkg/: models.py  params.py  render.py  takeoff.py  validate.py
services/core-engine/tests/: test_api.py  test_cpm.py  test_excel_export.py  test_geometry.py  test_harga_extract.py  test_rab.py  test_rab_calculator.py  test_scenario.py  test_scenario_custom.py  test_schedule_plan.py  test_sections.py  test_takeoff.py  test_tkg.py  test_validate.py
services/document-intelligence/: Dockerfile  README.md  pyproject.toml
services/document-intelligence/app/: main.py
services/document-intelligence/tests/: test_health.py
(+276 files in other folders)
