[project]
name = "paax-core-engine"
version = "0.6.0"
description = "PAAX AI — Deterministic calculation engine (RAB, HSP, Kurva S) grounded in AHSP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "openpyxl>=3.1",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
