[tool.poetry]
name = "paax-document-intelligence"
version = "0.5.0"
description = "PAAX Document Intelligence"
authors = ["Basrenggg <basrenggg@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
python-multipart = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
